@@ -4,6 +4,8 @@ Changelog
 2.13.1 (unreleased)
 -------------------
 
+- Removed cruft in ``pickle/pickle.c`` related to removed ``__getnewargs__``.
+
 
 2.13.0 (2010-02-22)
 -------------------
